--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title>MMS</title>
+<title>TDN</title>
 </head>
 <body>
-<center><font size="50px;">We, the technicians of the server are no longer working for MMS. Therefore this website is closed down. Sorry about this, feel <sarcasm>free</sarcasm> to blame minecrafter418 over this.</font>
+<center><font size="50px;">We, the technicians of the server are no longer working for TDN. Therefore this website is closed down. Sorry about this, feel <sarcasm>free</sarcasm> to blame minecrafter418 over this.</font>
 </body>
 <html>
