moo, you can't fkin code

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
 <title>TDN</title>
+<link rel="stylesheet" href="default.css">
 </head>
 <body>
-<center><font size="50px;">We, the technicians of the server are no longer working for TDN. Therefore this website is closed down. Sorry about this, feel <sarcasm>free</sarcasm> to blame minecrafter418 over this.</font>
+<center>
+<font size="50px;">moo3oo3oo3, you can't fkin code.<br><a href="http://dimension-network.github.io">click here for a noobish website .-.</a></font></center>
 </body>
 <html>
