srsly moo can't code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <center>
-<font size="50px;">moo3oo3oo3, you can't fkin code.<br><a href="http://dimension-network.github.io">click here for a noobish website .-.</a></font></center>
+<font size="50px;">moo3oo3oo3, you can't fkin code.<br><a href="http://dimension-network.github.io">click here for a noobish website .-.</a></font><br><a href="home.html">or click here to view this site</a></center>
 </body>
 <html>
