--- a/header.html
+++ b/header.html
@@ -1,7 +1,4 @@
 <header class="start">
-	<svg version="1.1" id="logo" class="start" viewBox="0 0 200 200" enable-background="new 0 0 200 200" xml:space="preserve">
-		<circle r="50" cx="100" cy="100" fill="#fff" />
-		<text x="50" y="100" fill="#000">Better Logo</text>
-	</svg>
+	<img id="logo" class="start" src="assets/tdn.svg">
 </header>
 <img id="background" src="assets/background.png">
