--- a/prison/index.html
+++ b/prison/index.html
@@ -8,12 +8,12 @@
 			}
 			onerror = dumpErrors;
 		</script>
-		<script src="jquery.js"></script>
-		<script src="elements.js"></script>
+		<script src="/jquery.js"></script>
+		<script src="/elements.js"></script>
 		<script>var __adobewebfontsappname__ = "code"</script>
 		<script src="http://use.edgefonts.net/dosis:n8,n3,n2,n7,n6,n4,n5:all.js"></script>
 	</head>
-	<body id="home">
+	<body id="prison">
 		<noscript>This page requires javascript!</noscript>
 		
 	</body>
