--- a/survival/index.html
+++ b/survival/index.html
@@ -14,6 +14,7 @@
 		<script src="http://use.edgefonts.net/dosis:n8,n3,n2,n7,n6,n4,n5:all.js"></script>
 	</head>
 	<body id="survival">
+		<noscript>This page requires javascript!</noscript>
 		
 	</body>
 </html>
