--- a/staff/index.html
+++ b/staff/index.html
@@ -12,9 +12,18 @@
 		<script src="/elements.js"></script>
 		<script>var __adobewebfontsappname__ = "code"</script>
 		<script src="http://use.edgefonts.net/dosis:n8,n3,n2,n7,n6,n4,n5:all.js"></script>
+		
+		<script src='index.js'></script>
+		<link rel='stylesheet' href='index.css'>
 	</head>
 	<body id="staff">
 		<noscript>This page requires javascript!</noscript>
+		
+		<center>
+			<span class='title'>Staff</span>
+			<br>
+			<div id='staff'></div>
+		</center>
 		
 	</body>
 </html>
