--- a/rules/index.html
+++ b/rules/index.html
@@ -12,9 +12,24 @@
 		<script src="/elements.js"></script>
 		<script>var __adobewebfontsappname__ = "code"</script>
 		<script src="http://use.edgefonts.net/dosis:n8,n3,n2,n7,n6,n4,n5:all.js"></script>
+		
+		<link rel="stylesheet" href="index.css">
 	</head>
 	<body id="rules">
 		<noscript>This page requires javascript!</noscript>
+		
+		<div id="rules">
+			<ul id="rules">
+				<li>Please respect each other</li>
+				<li>Don't grief in survival. If you see someone griefing please report them <a href='http://bit.ly/PlayerReportMMS'>here</a> or contact staff</li>
+				<li>Don't talk back to others, especially staff, it apparently gets you a kick and a temp ban. This is insane, for sure</li>
+				<li>No racist/sexist remarks</li>
+				<li>No yo mama jokes (who wrote these lis?!)</li>
+				<li>If you find a bug, please don't exploit it</li>
+				<li>No trolling</li>
+				<li>No lag machines</li>
+			</ul>
+		</div>
 		
 	</body>
 </html>
