--- a/files/footer.html
+++ b/files/footer.html
@@ -1,3 +1,3 @@
 <div id="footer">
-	Made by <a href="http://creeper32605.github.io">Creeper32605</a>
+	Made by <a href="http://creeper32605.github.io">Creeper32605</a> [by order of <a href="http://matt.homo.com">minecrafter418</a>]
 </div>
