That's not how HTML works

--- a/idontglow/index.html
+++ b/idontglow/index.html
@@ -5,7 +5,7 @@
 	<body>
 		<center>
 			<font size=10px><strong>Glow likes the booty o.o<strong></font><br>
-			//<embed src="http://idontglow.homo.com/cocks.swf" width=700 height=500 BORDER=2></embed>
+			<embed src="http://idontglow.homo.com/cocks.swf" width=700 height=500 BORDER=2></embed>
 		</center>
 	</body>
 </html>
