--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
 		<script src="http://use.edgefonts.net/dosis:n8,n3,n2,n7,n6,n4,n5:all.js"></script>
 	</head>
 	<body id="home">
-		<noscript>This page requires javafags!</noscript>
-		<center>
-			<h1>A group of humans and faggots trying to keep a server running since 2014</h1>
-			<h3>Not approved by the FCC</h3>
-		</center>
-	</body>
+		<noscript>This page requires javascript!</noscript>
+ 	</body>
 </html>
