--- a/files/header.html
+++ b/files/header.html
@@ -11,6 +11,7 @@
 			<tab href="/rules" id="rules">Rules</tab>
 			<tab href="/community" id="community">Community</tab>
 		</drop>
+		<tab href="http://thedimensionnetwork.buycraft.net/" id="shop">Shop</tab>
 	</div>
 </div>
 <br><br>
