--- a/rules/index.html
+++ b/rules/index.html
@@ -22,12 +22,11 @@
 			<ul id="rules">
 				<li>Please respect each other, especially staff</li>
 				<li>Don't grief in survival. If you see someone griefing please report them <a href='http://bit.ly/PlayerReportMMS'>here</a> or contact staff</li>
-				<li>Don't talk back to others, especially staff, it apparently gets you a kick and a temp ban. This is insane, for sure</li>
+				<li>Don't talk back to others, especially staff.</li>
 				<li>No racist/sexist remarks</li>
-				<li>No yo mama jokes (who wrote these rules?!)</li>
-				<li>If you find a bug, don't let staff see you exploiting it</li>
-				<li>No trolling little kids</li>
-				<li>No lag machines (you may lag the server in any other way)</li>
+				<li>No harassment, bullying, or threatening other players or staff</li>
+				<li>If you find a bug, report it immediately to staff or <a href="" >here</a></li>
+				<li>No lag machines</li>
 			</ul>
 		</div>
 		
