--- a/default/header.html
+++ b/default/header.html
@@ -4,8 +4,8 @@
 	<tabgroup id='ptabs'>
 		<tab href='/'>Home</tab>
 		<tab href='/'>Add yer tabs</tab>
-		<tab href='/'>Staff</tab>
-		<tab href='/'>Rules</tab>
+		<tab href='/staff/'>Staff</tab>
+		<tab href='/rules/'>Rules</tab>
 		<tab href='/'>Shop</tab>
 	</tabgroup>
 </header>
