this should work better

--- a/default/header.html
+++ b/default/header.html
@@ -3,7 +3,8 @@
 	<span id='ptitle'>The Dimension Network</span>
 	<tabgroup id='ptabs'>
 		<tab href='/'>Home</tab>
-		<tab href='/'>Add yer tabs</tab>
+		<tab href='/survival/'>Survival</tab>
+		<tab href='/prison/'>Prison</tab>
 		<tab href='/staff/'>Staff</tab>
 		<tab href='/rules/'>Rules</tab>
 		<tab href='/'>Shop</tab>
