--- a/default/header.html
+++ b/default/header.html
@@ -4,8 +4,8 @@
 	<tabgroup id='ptabs'>
 		<tab href='/'>Home</tab>
 		<tab href='/survival/'>Survival</tab>
-		<tab href='/prison/'>Prison</tab>
-		<tab href='/staff/'>Staff</tab>
+		<tab href='/plotworld/'>Plotworld</tab>
+		<tab href='/kitpvp/'>KitPvP</tab>
 		<tab href='/rules/'>Rules</tab>
 		<tab href='/'>Shop</tab>
 	</tabgroup>
