--- a/default/header.html
+++ b/default/header.html
@@ -1,11 +1,12 @@
 <header>
-	<img id='plogo' src=''>
+	<img id='plogo' src='/assets/tdn.svg'>
 	<span id='ptitle'>The Dimension Network</span>
 	<tabgroup id='ptabs'>
 		<tab href='/'>Home</tab>
 		<tab href='/survival/'>Survival</tab>
 		<tab href='/plotworld/'>Plotworld</tab>
 		<tab href='/kitpvp/'>KitPvP</tab>
+		<tab href='/staff/'>Staff</tab>
 		<tab href='/rules/'>Rules</tab>
 		<tab href='/'>Shop</tab>
 	</tabgroup>
