Removed crap, added something that's needed.

--- a/default/footer.html
+++ b/default/footer.html
@@ -1,4 +1,4 @@
 <footer>
 	&copy; Creeper32605 2014<br>
-	Coded because I was bored and I still hate moo.
+	This website is still in beta stages.
 </footer>
