wow such responsive

--- a/default/header.html
+++ b/default/header.html
@@ -1,6 +1,11 @@
 <header>
 	<img id='plogo' src='/assets/tdn.svg'>
 	<span id='ptitle'>The Dimension Network</span>
+	<hamburger>
+		<div id='l1'></div>
+		<div id='l2'></div>
+		<div id='l3'></div>
+	</hamburger>
 	<tabgroup id='ptabs'>
 		<tab href='/'>Home</tab>
 		<tab href='/survival/'>Survival</tab>
@@ -8,6 +13,6 @@
 		<tab href='/kitpvp/'>KitPvP</tab>
 		<tab href='/staff/'>Staff</tab>
 		<tab href='/rules/'>Rules</tab>
-		<tab href='/'>Shop</tab>
+		<tab href='http://thedimensionnetwork.buycraft.net/' external>Shop</tab>
 	</tabgroup>
 </header>
