--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 		
 		<script src='/jquery.js'></script>
 		<script src='index.js'></script>
+		<link rel='stylesheet' href='index.css'>
 	</head>
 	<body>
 		<svg id='tdn-logo'></svg>
+		<span id='logo-title'>The Dimension Network</span>
+		<center>
+			Welcome
+		</center>
 	</body>
 </html>
