--- a/plotworld/index.html
+++ b/plotworld/index.html
@@ -5,6 +5,7 @@
 		<script src='/jquery.js'></script>
 	</head>
 	<body>
-		
+		<span class="title">Plotworld</span>
+		<center>This page is under development.<br>Buddeh, get some images and stuff</center>
 	</body>
 </html>
