--- a/rules/index.html
+++ b/rules/index.html
@@ -7,19 +7,16 @@
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body id="rules">
-		<noscript>This page requires javascript!</noscript>
-		
-		<div id="rules">
-			<ul id="rules">
-				<li>Please respect each other, especially staff</li>
-				<li>Don't grief in survival. If you see someone griefing please report them <a href='http://bit.ly/PlayerReportMMS'>here</a> or contact staff</li>
-				<li>Don't talk back to others, especially staff.</li>
-				<li>No racist/sexist remarks</li>
-				<li>No harassment, bullying, or threatening other players or staff</li>
-				<li>If you find a bug, report it immediately to staff or <a href="" >here</a></li>
-				<li>No lag machines</li>
-			</ul>
-		</div>
-		
+		<span class="title">Rules</span>
+		<ul id="rules">
+			<li>Treat others the same way you would like to be treated by them yourself</li>
+			<li>Please respect each other</li>
+			<li>Do not grief in survival. Report players <a href='#'>here</a> or to staff</li>
+			<li>Do not talk back to others</li>
+			<li>No racist/sexist remarks</li>
+			<li>No harassment, bullying, or threatening other players or staff</li>
+			<li>If you find a bug, report it immediately to staff or <a href="#">here</a></li>
+			<li>No lag machines</li>
+		</ul>
 	</body>
 </html>
