--- a/survival/index.html
+++ b/survival/index.html
@@ -5,7 +5,7 @@
 		<script src="/jquery.js"></script>
 	</head>
 	<body id="survival">
-		<noscript>This page requires javascript!</noscript>
-		
+		<span class='title'>Survival</span>
+		<center>This page is under development<br>I need imageees</center>
 	</body>
 </html>
