--- a/kitpvp/index.html
+++ b/kitpvp/index.html
@@ -5,6 +5,7 @@
 		<script src='/jquery.js'></script>
 	</head>
 	<body>
-		
+		<span class='title'>KitPvP</span>
+		<center>This page is under development.<br>So I need images</center>
 	</body>
 </html>
