add more footer stuff

--- a/default/footer.html
+++ b/default/footer.html
@@ -1,4 +1,14 @@
 <footer>
 	&copy; Creeper32605 2014<br>
-	This website is still in beta stages.
+	This website is still in development.
+	<div id='addinfo'>
+		<br>
+		License-ish thing:<br>
+		Do not touch (or even steal) my code without my permission. DON'T EVEN THINK ABOUT IT.
+		<br><br>
+		jQuery: <a href='//jquery.com'>jquery.com</a><br>
+		Snap.svg: <a href='//snapsvg.io'>snapsvg.io</a><br>
+		<br>
+		This website is best experienced in the newest versions of Chrome/Chromium or Opera.
+	</div>
 </footer>
