--- a/rules/index.html
+++ b/rules/index.html
@@ -14,8 +14,8 @@
 			<li>Do not grief in survival. Report players <a href='#'>here</a> or to staff</li>
 			<li>Do not talk back to others</li>
 			<li>No racist/sexist remarks</li>
-			<li>No harassment, bullying, or threatening other players or staff</li>
-			<li>If you find a bug, report it immediately to staff or <a href="#">here</a></li>
+			<li>No harassment, bullying, or threatening</li>
+			<li>If you find a bug, report it <a href="#">here</a> or to staff</li>
 			<li>No lag machines</li>
 		</ul>
 	</body>
