--- a/default/footer.html
+++ b/default/footer.html
@@ -1,6 +1,7 @@
 <footer>
-	&copy; Creeper32605 2014<br>
-	This website is still in development.
+	<span id='copyright'>&copy;</span>
+	<span>Creeper32605 2014<br>
+	This website is still in development.</span>
 	<div id='addinfo'>
 		<br>
 		License-ish thing:<br>
