--- a/rules/index.html
+++ b/rules/index.html
@@ -9,14 +9,18 @@
 	<body id="rules">
 		<span class="title">Rules</span>
 		<ul id="rules">
-			<li>Treat others the same way you would like to be treated by them yourself</li>
-			<li>Please respect each other</li>
-			<li>Do not grief in survival. Report players <a href='#'>here</a> or to staff</li>
-			<li>Do not talk back to others</li>
-			<li>No racist/sexist remarks</li>
-			<li>No harassment, bullying, or threatening</li>
-			<li>If you find a bug, report it <a href="#">here</a> or to staff</li>
-			<li>No lag machines</li>
+			<li>Be respectful to all players</li>
+			<li>Do not hack.</li>
+			<li>Do not grief</li>
+			<li>Do not answer back to others in a rude manner</li>
+			<li>Racist and sexist remarks are not tolerated</li>
+			<li>Do not harass, bully, or threaten anyone</li>
+			<li>Repot any bugs you find to staff members.</li>
+			<li>Do not abuse or spread knowledge of a bug.</li>
+			<li>Do not create anything that may lag or crash a server.</li>
+			<br>
+			<Strong>All rules apply across the network.</Strong>
+			<Strong>You can report troublesome players in game via /report.</Strong>
 		</ul>
 	</body>
 </html>
