--- a/rules/index.html
+++ b/rules/index.html
@@ -19,7 +19,7 @@
 			<li>Do not abuse or spread knowledge of a bug.</li>
 			<li>Do not create anything that may lag or crash a server.</li>
 			<br>
-			<Strong>All rules apply across the network.</Strong>
+			<Strong>All rules apply across the network.</Strong><br>
 			<Strong>You can report troublesome players in game via /report.</Strong>
 		</ul>
 	</body>
