--- a/kitpvp/index.html
+++ b/kitpvp/index.html
@@ -6,6 +6,6 @@
 	</head>
 	<body>
 		<span class='title'>KitPvP</span>
-		<center>This page is under development.<br>So I need images</center>
+		<center>Moo can't code</center>
 	</body>
 </html>
