--- a/survival/index.html
+++ b/survival/index.html
@@ -3,9 +3,18 @@
 	<head>
 		<title>TDN</title>
 		<script src="/jquery.js"></script>
+
+		<script src='/js/slideshow.js'></script>
 	</head>
 	<body id="survival">
-		<span class='title'>Survival</span>
-		<center>This page is under development<br>I need imageees</center>
+		<span class='title inv'>Survival</span>
+		<slideshow>
+			<img src='http://i.imgur.com/Rj38HoZ.png'>
+			<img src='http://i.imgur.com/YWzzi9F.png'>
+			<img src='http://i.imgur.com/P7nByBm.png'>
+			<img src='http://i.imgur.com/MzVmpSQ.png'>
+			<img src='http://i.imgur.com/q3xRXJ3.png'>
+			<img src='http://i.imgur.com/zPhtBmS.png'>
+		</slideshow>
 	</body>
 </html>
