Update staff page

--- a/staff/index.html
+++ b/staff/index.html
@@ -9,6 +9,24 @@
 	<body id="staff">
 		<span class='title'>Staff</span>
 		<br>
+		<div id='sib'></div>
+		<div id='staffinfo'>
+			<closebtn></closebtn>
+			<div id='stdiv'>
+				<div id='stdliv'>
+					<span id='srank'>Rank</span>
+				</div>
+				<div id='stdriv'>
+					<span id='sname'>Name</span>
+				</div>
+			</div>
+			<div id='sldiv'>
+				<img id='skin' src=''>
+			</div>
+			<div id='srdiv'>
+				<span id='sdesc'>Description</span>
+			</div>
+		</div>
 		<center>
 			<div id='staff'></div>
 		</center>
