--- a/rules/index.html
+++ b/rules/index.html
@@ -15,11 +15,11 @@
 			<li>Do not answer back to others in a rude manner</li>
 			<li>Racist and sexist remarks are not tolerated</li>
 			<li>Do not harass, bully, or threaten anyone</li>
-			<li>Repot any bugs you find to staff members.</li>
+			<li>Report any bugs you find to staff members.</li>
 			<li>Do not abuse or spread knowledge of a bug.</li>
 			<li>Do not create anything that may lag or crash a server.</li>
 			<br>
-			<Strong>All rules apply across the network.</Strong><br>
+			<Strong>All rules apply across the network and to all players.</Strong><br>
 			<Strong>You can report troublesome players in game via /report.</Strong>
 		</ul>
 	</body>
