update survival and rules

--- a/rules/index.html
+++ b/rules/index.html
@@ -8,19 +8,41 @@
 	</head>
 	<body id="rules">
 		<span class="title">Rules</span>
-		<ul id="rules">
-			<li>Be respectful to all players</li>
-			<li>Do not hack.</li>
-			<li>Do not grief</li>
-			<li>Do not answer back to others in a rude manner</li>
-			<li>Racist and sexist remarks are not tolerated</li>
-			<li>Do not harass, bully, or threaten anyone</li>
-			<li>Report any bugs you find to staff members.</li>
-			<li>Do not abuse or spread knowledge of a bug.</li>
-			<li>Do not create anything that may lag or crash a server.</li>
-			<br>
-			<Strong>All rules apply across the network and to all players.</Strong><br>
-			<Strong>You can report troublesome players in game via /report.</Strong>
-		</ul>
+		<div id="rules">
+			<rule id='reql'>
+				<img class='ruleexp' src='assets/eql.svg'>
+				<div class='ruledsc'>
+					<span class='rttle'>All players (except for cows) are treated equally</span>
+					<ul>
+						<li>All rules apply across the network and to all players</li>
+						<li>You may report any player using /report</li>
+						<li>You must report any staff member abusing their powers</li>
+					</ul>
+				</div>
+			</rule>
+			<rule id='rres'>
+				<img class='ruleexp' src='assets/res.svg'>
+				<div class='ruledsc'>
+					<span class='rttle'>Respect each other</span>
+					<ul>
+						<li>Do not answer back to others in a rude manner</li>
+						<li>Racist and sexist remarks are not tolerated</li>
+						<li>Do not harass, bully, or threaten anyone</li>
+					</ul>
+				</div>
+			</rule>
+			<rule id='radv'>
+				<img class='ruleexp' src='assets/adv.svg'>
+				<div class='ruledsc'>
+					<span class='rttle'>Do not abuse advantages</span>
+					<ul>
+						<li>Do not hack or grief</li>
+						<li>Report any bugs you find to staff members</li>
+						<li>Do not abuse or spread knowledge of a bug</li>
+						<li>Do not create anything that may lag or crash a server</li>
+					</ul>
+				</div>
+			</rule>
+		</div>
 	</body>
 </html>
