--- a/rules/index.html
+++ b/rules/index.html
@@ -17,6 +17,7 @@
 						<li>All rules apply across the network and to all players</li>
 						<li>You may report any player using /report</li>
 						<li>You must report any staff member abusing their powers</li>
+						<li style="font-size:16, color:grey;">The owner never does this</li>
 					</ul>
 				</div>
 			</rule>
@@ -28,6 +29,7 @@
 						<li>Do not answer back to others in a rude manner</li>
 						<li>Racist and sexist remarks are not tolerated</li>
 						<li>Do not harass, bully, or threaten anyone</li>
+						<li style="font-size:16, color:grey;">The owner never does this</li>
 					</ul>
 				</div>
 			</rule>
@@ -40,6 +42,7 @@
 						<li>Report any bugs you find to staff members</li>
 						<li>Do not abuse or spread knowledge of a bug</li>
 						<li>Do not create anything that may lag or crash a server</li>
+						<li style="font-size:16, color:grey;">The owner never does this</li>
 					</ul>
 				</div>
 			</rule>
