--- a/staff/index.html
+++ b/staff/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>TDN</title>
 		<script src="/jquery.js"></script>
+		<script src='//creeper32605.github.io/random/morph/morph.js'></script>
 		<script src='index.js'></script>
 		<link rel='stylesheet' href='index.css'>
 	</head>
@@ -10,7 +11,7 @@
 		<span class='title'>Staff</span>
 		<br>
 		<div id='sib'></div>
-		<div id='staffinfo'>
+		<div id='staffinfo' class='mr-hidden'>
 			<closebtn></closebtn>
 			<div id='stdiv'>
 				<div id='stdliv'>
