--- a/staff/index.html
+++ b/staff/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>TDN</title>
 		<script src="/jquery.js"></script>
-		<script src='//creeper32605.github.io/random/morph/morph.js'></script>
+		<script src='//creeper32605.github.io/jslib/morph.min.js'></script>
 		<script src='index.js'></script>
 		<link rel='stylesheet' href='index.css'>
 	</head>
